# moca-agent

./: CHANGELOG.md  Makefile.am  NOTICE  autogen.sh  configure.ac
.github/: CODEOWNERS
.github/workflows/: native-build.yml
config/: CcspMoCA.cfg  CcspMoCADM.cfg  TR181-MoCA.XML
cov_docker_script/: README.md  build_native.sh  common_external_build.sh  component_config.json  configure_options.conf  run_build.sh  run_external_build.sh  setup_dependencies.sh
docs/: README.md
scripts/: MoCA_isolation.sh  moca_mroute.sh  moca_mroute_ip.sh  moca_whitelist_ctl.sh
source/: Makefile.am
source/MRD/: Makefile.am  mrd.c
source/MoCASsp/: Makefile.am  ssp_action.c  ssp_global.h  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h
source/TR-181/: Makefile.am
source/TR-181/board_sbapi/: Makefile.am  cosa_moca_apis.c  cosa_moca_helpers.c  cosa_moca_helpers.h  cosa_moca_param.c  cosa_moca_param.h  cosa_moca_webconfig_api.c  cosa_moca_webconfig_api.h
source/TR-181/include/: ccsp_mocaLog_wrapper.h  cosa_moca_apis.h
source/TR-181/middle_layer_src/: Makefile.am  cosa_apis.h  cosa_dml_api_common.h  cosa_moca_dml.c  cosa_moca_dml.h  cosa_moca_internal.c  cosa_moca_internal.h  cosa_moca_network_info.c  cosa_moca_network_info.h  dml_tr181_custom_cfg.h  dml_tr181_custom_cfg_custom.h  plugin_main.c  plugin_main.h  plugin_main_apis.h
source/test/: CcspMoCATest.cpp  Makefile.am  cosa_moca_apis_test.cpp  cosa_moca_dml_test.cpp  cosa_moca_network_info_test.cpp  cosa_moca_webconfig_api_test.cpp  gtest_main.cpp  moca_mock.cpp  moca_mock.h  plugin_main_test.cpp  run_ut.sh
